--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@ body {
 }
 
 h1 {
+    margin-top: 5rem;
     font-size:5rem ;
     
 }
 
 .container {
-    height: 70vh;
+    height: 70vmin;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,4 +59,12 @@ h1 {
     font-weight: 600;
     color: #191913;
     margin-top: 10px;
+}
+
+@media (max-width:600px) {
+
+    h1 {
+        font-size:3.5rem ;
+        
+    }
 }
